src/content/docs/0.10.0/reference/cli-command-mode.mdx
---
title: CLI and Command Mode
description: Rmpc's CLI and command mode and how to use them
sidebar:
  order: 3
slug: 0.10.0/reference/cli-command-mode
---

import { Steps } from "@astrojs/starlight/components";
import { LinkCard, CardGrid } from "@astrojs/starlight/components";

Rmpc also features a basic command line interface to support scripting and headless control of mpd without a need for additional tools.

To view the available commands run `rmpc --help`.

These commands are also available in the TUI mode by pressing `CommandMode` bind (`:` by default).

Additionally, these commands can also be bound to a key using the `Command` action as [described here](/0.10.0/configuration/keybinds#global)

You can also get help for a specific command by running the command with `--help`. For example `rmpc toggle-output --help`.

```bash frame=none showLineNumbers=false
> rmpc help
Usage: rmpc [OPTIONS] [COMMAND]

Commands:
  addrandom
  config          Prints the default config. Can be used to bootstrap your config file
  theme           Prints the default theme. Can be used to bootstrap your theme file
  lyricsindex     Index the lyrics dir and display result, meant only for debugging purposes
  update          Scan MPD's music directory for updates
  rescan          Scan MPD's music directory for updates. Also rescans unmodified files
  albumart        Saves the current album art to a file. Exit codes: * 0: Success * 1: Error * 2: No album art found * 3: No song playing
  debuginfo       Prints information about optional runtime dependencies
  version         Prints the rmpc version
  play            Plays song at the position in the current playlist. Defaults to current paused song
  pause           Pause playback
  unpause         Unpause playback
  togglepause     Toggles between play and pause
  stop            Stops playback
  next            Plays the next song in the playlist
  prev            Plays the previous song in the playlist
  volume          Sets volume, relative if prefixed by + or -. Prints current volume if no arguments is given
  repeat          On or off
  random          On or off
  single          On, off or oneshot
  consume         On, off or oneshot
  togglerepeat    Toggles the repeat mode
  togglerandom    Toggles the random mode
  togglesingle    Toggles the single mode
  toggleconsume   Toggles the consume mode
  seek            Seeks current song(seconds), relative if prefixed by + or -
  clear           Clear the current queue
  add             Add a song to the current queue. Relative to music database root. '/' to add all files to the queue
  addyt           Add a song from youtube to the current queue
  outputs         List MPD outputs
  toggleoutput    Toggle MPD output on or off
  enableoutput    Enable MPD output
  disableoutput   Disable MPD output
  decoders        List MPD decoder plugins
  status          Prints various information like the playback status
  song            Prints info about the current song. If --path specified, prints information about the song at the given path instead. If --path is specified multiple times, prints an array containing all the songs
  mount           Mounts supported storage to MPD
  unmount         Unmounts storage with given name
  listmounts      List currently mounted storages
  listpartitions  List the currently existing partitions
  sticker         Manipulate and query song stickers
  remote          Send a remote command to running rmpc instance
  help            Print this message or the help of the given subcommand(s)

Options:
  -c, --config <FILE>
  -t, --theme <FILE>
  -a, --address <ADDRESS>      Override the address to connect to. Defaults to value in the config file
  -p, --password <PASSWORD>    Override the MPD password
      --partition <PARTITION>  Partition to connect to at startup
      --autocreate             Automatically create the partition if it does not exist. Requires partition to be set
  -h, --help                   Print help
```

## Remote Commands

The `remote` command allows you to control a running rmpc instance from external scripts or other terminal sessions. This is particularly useful for:

* Window manager integration
* Media key bindings
* Automation scripts
* Headless control

### Available Remote Commands

```bash
rmpc remote <COMMAND>

Commands:
  indexlrc    Notify rmpc that a new lyrics file has been added
  status      Display a message in the status bar
  set         Sets a value in running rmpc instance
  keybind     Emulate a keybind press in the running rmpc instance
  switchtab  Switch to a specific tab by name
  query       Query the currently active tab name
  help        Print this message or the help of the given subcommand(s)

Options:
      --pid <PID>  PID of the rmpc instance to send the remote command to. If not provided, rmpc will try to notify all the running instances
  -h, --help       Print help
```

### Examples

```bash
# Emulate pressing 'p' (play/pause)
rmpc remote keybind p

# Switch to the Queue tab directly
rmpc remote switchtab "Queue"

# Switch to the Queue tab (using number key)
rmpc remote keybind 1

# Next track
rmpc remote keybind ">"

# Target a specific rmpc instance
rmpc remote --pid 12345 keybind "a"

# Display a custom status message
rmpc remote status "Custom message" --level info
```

For detailed information and more examples, see the [Remote Commands Guide](/0.10.0/guides/remote-commands).
